# cognite-utils

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  export_groups.py  groups_oxy_oog_dev.xlsx  pyproject.toml  test_environment.py  verify_notebook.py
.cursor/rules/: regression-tests-on-fixes.mdc
cognite_utils/: __init__.py
data/: all_countries.csv  events.csv  populations_postprocessed.csv
notebooks/: Get_Cognite_Groups.ipynb
notebooks/Capabilities_Manager/: Get_Cognite_Groups (Asset-Centric).ipynb  Remove_Capabilities.ipynb  Restore_Capabilities.ipynb  groups_by_customer.xlsx
notebooks/Training/: 1_Authentication.ipynb  2_List_Search_Retrieve (Asset-Centric).ipynb  3_Create_Update_Insert.ipynb  4_Delete.ipynb  Python_SDK_Training_Problems.ipynb  README.md  Solution - Hands On Exercise.ipynb  section_problems_notebook (Asset-Centric).ipynb
tests/: __init__.py  test_cognite_auth.py  test_group_backup_restore.py  test_ts_plot.py
utils/: cognite_auth.py  cognite_groups_export.py  get-annotations-by-externalid-payload.json  get-asset-by-externalid-payload.json  get-assettag-by-externalid-payload.json  get-canvas-by-id.graphql  get-file-by-externalid-payload.json  group_backup_restore.py  remove_capabilities.py  ts_plot.py
